# IMAU-FDM

./: .gitignore  CODE_TODOS.md  Containerfile  Makefile  Makefile.am  README.md  compile_hpc.sh  configure  configure.ac  environment.yml  fpm.toml  imau-fdm.x
.github/workflows/: build.yml  docs.yml  lint.yml
MO_fit/code/: MO_fit-visualizations.ipynb  MO_fit.ipynb  merge_datasets.py  mo_fit_functions.py  plot_core_locations.py  process_firn_cores.ipynb  process_standardized_cores.py  process_sumup_cores.py  processing_sumup_cores.ipynb  test_MO.ipynb
Program/: Makefile  ini_model.f90  mainprogram_firnmodel.f90  openNetCDF.f90  output.f90  subprogram.f90  time_loop.f90
QAQC/: check_run_is_completed.ipynb  logfile_output.py  plot_logfile_output.ipynb  plot_ongoing_run.ipynb
Rundir/: CancelMyJob.sc  launch_new_job.sc  npnf_inner_script.sc  npnf_outer_script.sc  start_model_ccab.sc  submit_job.sc
Rundir/newpointlist/: removelist.txt
Rundir/pointlists/: pointlist_highres.txt
Rundir/readpointlist/: Makefile  distribute_points.x  readpointlist.x
_build/logs/: myst.build.json
cores/code/: MO_fit.ipynb  merge_datasets.ipynb  merge_datasets.py  mo_fit_functions.py  process_firn_cores.ipynb  process_standardized_cores.ipynb  process_standardized_cores.py  process_sumup_cores.py  processing_sumup_cores.ipynb
distributor/: launch_job.sc  launch_job.sh
docs/: _config.yml  _toc.yml  intro.md  proposal_logfiles.md  proposal_resubmission.md
docs/development/: building_docs.md  distributor.md  overview.md  toml.md
docs/mo_fitting/: overview.md
docs/overview/: architecture.md  physics.md
docs/postprocessing/: extending.md  overview.md
docs/preprocessing/: overview.md
docs/running/: hpc.md  offline.md  overview.md  settings.md
docs/source/: compiling.md  conf.py  documentation.md  index.rst  overview.md
documentation/: ECMWF_access.md  FDM_variables.md
example/: README_example.md
example/averages/: evap_point_8949.nc  ff10m_point_8949.nc  precip_point_8949.nc  sndiv_point_8949.nc  snowfall_point_8949.nc  snowmelt_point_8949.nc  tskin_point_8949.nc
example/ms_files/: model_settings_FGRN055_1.txt  model_settings_FGRN055_10.txt  model_settings_FGRN055_2.txt  model_settings_FGRN055_3.txt  model_settings_FGRN055_4.txt  model_settings_FGRN055_5.txt  model_settings_FGRN055_6.txt  model_settings_FGRN055_7.txt  model_settings_FGRN055_8.txt  model_settings_FGRN055_9.txt
example/output/: FGRN055_era055_1D_1.nc
example/pre-process/: extract_single_point.py
example/restart/: FGRN055_era055_initialize_from_2023_run_1.nc  FGRN055_era055_restart_from_spinup_1.nc
example/settings/: paths.toml
init/: .makeFDMfiles_FGRN055.sc.swp
init/ANT11_era05/: all_makeFDMaverages_FGRN055.sc  makeFDMtimeseries_FGRN055.sc
init/FGRN055-era/: all_makeFDMaverages_FGRN055-era.sc  all_makeFDMfiles_FGRN055-era.sc  makeFDMfiles_FGRN055-era.sc  makeFDMyears_FGRN055-era.sc  run_sc_job.sc  (+1 more)
launch_job/: ecsbatch.log.34994192  ecsbatch.log.35013914  launch_job.sh  make_resubmit_pointlist.py  submit_job.sh
misc/: Debug.ipynb  Export_single_point.ipynb  Firn-and-ice-core-points.ipynb  QA-preprocessing.ipynb  bashrc_example  copy_files_from_tape_FGRN055.sc  mask-and-point-plotting.ipynb  pointlist_cores.txt
post-process/: README.md  Reprojecting_FDM_RACMO.ipynb  add_crs_metadata.ipynb  add_crs_metadata.py  postprocess_FDM_output.ipynb
pre-process-RACMO/: README.md  make_fdm_averages.py  make_fdm_timeseries.py  make_fdm_years.py  migrate_datefree.sbatch  migrate_existing_to_datefree.py  revert_datefree_migration.py  submit_jobs.py
research/: README.md  config.py  create_k_transect_pointlists.py  firn_analysis.py  firn_ice_content_analysis.py  firn_memory_analysis.py  ice_lens_detection.py  init_density_cons_comparison.ipynb  percolation_zone_research.ipynb  research_visualization.ipynb  runoff_limit_analysis.py  submit_firn_ice_content.sh  submit_firn_memory.sh  submit_ice_lens.sh  transient_percolation_analysis.py  water_percolation_viz.ipynb  zone_transition.py
rundir/: .launch_new_job.sc.swp  .start_model_ccab.sc.swp  CancelMyJob.sc  ecsbatch.log.31186141  ecsbatch.log.31463584  ecsbatch.log.34480838  ecsbatch.log.34544026  ecsbatch.log.35885373  ecsbatch.log.None  launch_example_job.sc  launch_new_job.sc  launch_new_job_ant27.sc  launch_new_job_idealized.sc  make_pointlist.sc  npnf_inner_script.sc  npnf_outer_script.sc  ns_script.sc  offline.sc  offline.sh  start_model_ccab.sc  start_model_ccab_archive.sc  submit_job.sc
settings/: ecmwf_settings.toml  job_settings.toml  model-settings.toml  model_settings.toml  model_variables.toml  paths.toml  run_settings.toml
source/: distributor.f90  firn_physics.f90  grid_routines.f90  initialise_model.f90  initialise_variables.f90  main.f90  model_main.f90  model_settings.f90  openNetCDF.f90  output.f90  perm.code-workspace  test_read_netcdf.f90  test_toml.f90  time_loop.f90  water_physics.f90
temp/: 3hourly_2023_conversion.py  check_restart_concatenation.ipynb  scratch_check_RACMO.ipynb  scratch_plot_FAC_output.ipynb  transfer_RACMO2p32.sh
(+1128 files in other folders)
